...
    <string name="pref_summary_autocomplete">Use the history to auto complete the IP address.</string>
    <string name="delete_all">Hapus Semua</string>
    <string name="delete">Hapus</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="dialog_delete_history_msg">Apakah anda yakin ingin menghapus semua history?</string>
  <!--  <string name="converter">Converter</string> -->
    <string name="ip_decimal">IP Decimal</string>
    <string name="ip_binary">IP Binary</string>
    <string name="ip_hex">IP Hex</string>
    <string name="ip_binary_netmask">IP Binary Netmask</string>
    <string name="convert_to_binaryhex">Convert to Binary/Hex</string>
    <string name="convert_to_decimalhex">Convert to Decimal/Hex</string>
...
