...
                android:id="@+id/label_ipdecimal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_decimal" />

            <EditText
                android:id="@+id/converter_ipaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_ipdecimal"
                android:digits="0123456789."
                android:ems="9"
                android:hint="@string/put_ip_here"
...
